fix save to vocab bug. Fix DictBox Css alignment outside window screen

--- a/addon/css/inject.css
+++ b/addon/css/inject.css
@@ -18,11 +18,11 @@
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 	margin: 0.5rem 0 1rem 0;
 	border-radius: 2px;
-	min-width: 120px;
+	min-width: 200px;
 	display: none;
   	background-color: #f5f5f5;
 	position: absolute;
-	max-width: 50vw;
+	max-width: 700px;
 	padding: 8px;
 	z-index: 9999999999999;
 }
@@ -127,7 +127,7 @@
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	color: #000;
-	max-width: 45vw;
+	max-width: 675px;
 	padding-left: 5px;
 	padding-bottom: 2px;
 	clear: both;
